2013-11-07  Andreas Kupries <andreask@activestate.com>

	* support/installation/man.macros: [Ticket 369f67aeee] Updated to
	  newest from Tcl/Tk.

2013-05-30  Andreas Kupries  <andreask@activestate.com>

	* Makefile.in: [Bug 3613973][Allura 1371]: Applied patch by
	  Wolfgang Kechel, fixed missing CYGPATH invokations for paths in
	  the installation targets.

2013-04-04  Andreas Kupries  <aku@hephaistos>

	* support/installation/modules.tcl (Module): 
	* modules/debug: debug narrator module adapted
	  from Colin McCormack's Debug wub utility package.

2013-03-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* aclocal.m4: [Bug 3608581]: Extended check for executable
	* configure: extension to recognize an MSYS environment as Windows
	  and requiring a ".exe" suffix. Regenerated configure.

2013-03-11  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* support/installation/modules.tcl: Added 'pt' (of modules/pt) to
	  the set of distributed applications. Note that the application
	  was moved to apps/ for this.

2013-03-01  Andreas Kupries  <andreask@activestate.com>

	* support/devel/sak/validate/syntax.tcl (::sak::validate::syntax::Setup): 
	* support/devel/sak/validate/testsuites.tcl (::sak::validate::testsuites::Setup):
	  The namespace ::tcl contains parts necessary for the proper
	  operation of the interpreter, since 8.6. Do not delete anymore.

2013-02-15  Andreas Kupries  <andreask@activestate.com>

	* New module 'string'. String/text utilities, 8.5+.
	  First packages:
	  - string::token        - regex based lexing.
	  - string::token::shell - parsing basic shell command line syntax.

2013-02-08  Andreas Kupries <andreask@activestate.com>

	* apps/dtplite: Fixed missing -ibase option in direcotry
	* apps/dtplite.man: processing with -merge. Fixed sorting in
	  generated toc and indices. Plus new feature: -toc for external
	  toc to place in the output. Bumped to 1.0.4. Updated
	  documentation.
